2000-09-23  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/com2.c (murder), battlestar/com3.c (shoot),
	battlestar/com4.c (take): Correct "dont" to "don't".  From
	OpenBSD.
	* tests/battlestar.out28: Update.

	* battlestar/parse.c: Make local functions static.
	* battlestar/extern.h: Remove declarations of functions now static
	in parse.c.

	* battlestar/com4.c (eat): Check first for having the object to be
	eaten, then for needing a knife, then for being stuffed.  Also
	give a better message for things it doesn't make sense to eat.
	From OpenBSD.
	* tests/battlestar.in38, tests/battlestar.out38: New test.
	* tests/battlestar.test: Update.

	* battlestar/fly.c: Remove abs() macro; make local variables and
	functions static.
	* battlestar/extern.h: Remove declarations of functions now static
	in fly.c

	* battlestar/com1.c (news): Don't let CUMBER go negative.
	* battlestar/cypher.c (cypher): For INVEN, show -1% if CUMBER is
	zero.

	* battlestar/com4.c (drop): Disambiguate BODY; handle "kick
	door".  From OpenBSD.
	* tests/battlestar.in32, tests/battlestar.out32,
	tests/battlestar.in33, tests/battlestar.out33,
	tests/battlestar.in34, tests/battlestar.out34,
	tests/battlestar.in35, tests/battlestar.out35,
	tests/battlestar.in36, tests/battlestar.out36,
	tests/battlestar.in37, tests/battlestar.out37: New tests.
	* tests/battlestar.test: Update.

2000-09-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/com5.c (love): Allow for bathing goddess; better
	message when the lover is not present or for certain choices of
	lover.  From OpenBSD.

	* battlestar/com2.c (ravage): Allow for the bathing goddess.  From
	OpenBSD.

	* battlestar/extern.h: Add OBJ_PLURAL, objflags and
	is_plural_object.
	* battlestar/globals.c: Add objflags.
	* battlestar/com2.c (wearit), battlestar/com3.c (shoot),
	battlestar/com4.c (take, eat): Use is_plural_object rather than
	looking for a final 's'.
	* tests/battlestar.in31, tests/battlestar.out31: New test.